# calosum

./: .env  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  check_api_settings.py  check_telemetry.py  docker_ready.json  docker_ready.md  fix_harness.py  output_guidance.txt  parse_actions.py  pip_install_log.txt  pyproject.toml  rename_script.py  requirements.txt  search_papers.py  search_papers_2.py  test_output.txt  test_similarity.py
.calosum-runtime/memory/: episodic.jsonl
.calosum-runtime/telemetry/: events.jsonl
.githooks/: pre-commit
.github/workflows/: ci.yml
deploy/: Dockerfile  docker-compose.yml  otel-collector-config.yaml
docs/: ARCHITECTURE.md  INFRASTRUCTURE.md  INIT_PROJECT.MD  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  index.md  production-roadmap.md  prompt_report.md
docs/benchmarks/: baseline.md  fusion_ab_test.md
docs/components/: right-hemisphere-jepa-rs-contract.md
docs/design-docs/: architectural-evolution-sota.md  core-beliefs.md  dspy-self-learning.md  index.md
docs/exec-plans/: 2026-04-03-calosum-architecture-review-dual-hemisphere.md  (+1 more)
examples/: api_client.py  cognitive_cycle.py  final_prod_val.py  group_reflection.py  right_hemisphere_benchmark.py
scripts/: benchmark_right_hemisphere.py  ci_benchmark_gate.py  ci_integration_benchmark.py  coverage_gate_new_modules.py  docker_profile_ready.py  fusion_ab_test.py  jepa_phase1_benchmark.py  train_jepa_predictor.py  train_variant_preference_model.py
src/: test_openai.py  test_openai2.py
tests/: __init__.py  conftest.py  test_active_inference.py  test_api.py  test_async_retry_and_persistence.py  test_awareness.py  test_bridge_cross_attention.py  test_ci_scripts_exist.py  test_cli.py  test_contract_wrappers.py  test_factory.py  test_gea_experience_sharing.py  test_harness.py  test_knowledge_graph.py  test_left_hemisphere_rlm.py  test_llm_adapter.py  test_llm_failover.py  test_local_ui_sync.py  test_memory.py  test_night_trainer.py  test_persistent_runtime.py  test_pipeline.py  test_pipeline_dual_hemisphere_e2e.py  test_prompt_template_loading.py  test_qdrant_adapter.py  test_quantized_embeddings.py  test_reflection.py  test_right_hemisphere_hf.py  test_right_hemisphere_vjepa21.py  test_runtime.py  test_runtime_extensions.py  test_self_model.py  test_telegram_channel.py  test_telemetry_otlp.py  test_text_embeddings.py  test_tool_registry.py  test_verifier.py
ui/: README.md  index.html  package-lock.json  package.json
(+371 files in other folders)
