[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calosum"
version = "0.1.0"
description = "High-level skeleton for a dual-hemisphere neuro-symbolic AGI agent."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
calosum = "calosum.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
