[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calosum"
version = "0.1.0"
description = "High-level skeleton for a dual-hemisphere neuro-symbolic AGI agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typing_extensions>=4.7.0",
    "pydantic>=2.5.0",
    "qdrant-client>=1.7.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "duckduckgo-search>=5.0.0",
    "sse-starlette>=1.8.0",
    "tenacity>=8.3.0",
    "inferactively-pymdp",
    "nano-graphrag",
    "gensim>=4.0.0",
    "dspy",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
local = [
    "torch>=2.0.0",
    "peft>=0.4.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
]
# API-only mode. Intentionally excludes local model stack (torch/peft/transformers).
api = []

[project.scripts]
calosum = "calosum.bootstrap.cli:main"
calosum-harness = "calosum.harness_checks:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
env = [
    "MPLCONFIGDIR=/tmp/mplcfg",
]
